--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -6,7 +6,7 @@
         xmlns:local="clr-namespace:HM1"
         mc:Ignorable="d"
         Topmost="True"
-        Title="MainWindow" Height="450" Width="450">
+        Title="MainWindow" Height="450" Width="600">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"/>
@@ -15,23 +15,33 @@
             <RowDefinition Height="Auto"/>
         </Grid.RowDefinitions>
 
-
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="*"/>
+            <ColumnDefinition Width="*"/>
+            <ColumnDefinition Width="*"/>
+        </Grid.ColumnDefinitions>
         <Button x:Name="startButton" 
                 Content="Запуск Notepad"
                 Click="StartButton_Click" 
                 Height="30" 
                 Margin="10,10,10,10" 
-                HorizontalAlignment="Left"/>
+                />
+        <Button x:Name="cmdApp"
+            Content="2 Задача"
+            Click="cmdApp_Click"
+            Grid.Column="1"
+            Height="30"/>
         
         <Button x:Name="updateButton" 
                 Content="Обновление текстового поля"
                 Click="UpdatetButton_Click" 
                 Height="30" 
-                HorizontalAlignment="Right" 
+                Grid.Column="2"
                 Margin="10 10 10 10" />
 
         <TextBox x:Name="txtContent"
                  Grid.Row="2"
+                 Grid.ColumnSpan="3"
                  TextWrapping="Wrap"
                  VerticalScrollBarVisibility="Auto"
                  
@@ -42,6 +52,7 @@
                     Text="Готов"
                     Foreground="Gray"
                     HorizontalAlignment="Center"
+                    Grid.ColumnSpan="3"
             />
     </Grid>
 </Window>
